src/test/ui/polymorphization/type_parameters/closures.stderr
error: item has unused generic parameters
  --> $DIR/closures.rs:18:19
   |
LL | pub fn unused<T>() -> u32 {
   |               - generic parameter `T` is unused
...
LL |     let add_one = |x: u32| x + 1;
   |                   ^^^^^^^^^^^^^^

error: item has unused generic parameters
  --> $DIR/closures.rs:15:8
   |
LL | pub fn unused<T>() -> u32 {
   |        ^^^^^^ - generic parameter `T` is unused

error: item has unused generic parameters
  --> $DIR/closures.rs:27:19
   |
LL | pub fn used_parent<T: Default>() -> u32 {
   |                    - generic parameter `T` is unused
LL |     let _: T = Default::default();
LL |     let add_one = |x: u32| x + 1;
   |                   ^^^^^^^^^^^^^^

error: item has unused generic parameters
  --> $DIR/closures.rs:93:23
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn unused_all<G: Default>() -> u32 {
   |                       - generic parameter `G` is unused
LL |
LL |         let add_one = |x: u32| x + 1;
   |                       ^^^^^^^^^^^^^^

error: item has unused generic parameters
  --> $DIR/closures.rs:91:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn unused_all<G: Default>() -> u32 {
   |            ^^^^^^^^^^ - generic parameter `G` is unused

error: item has unused generic parameters
  --> $DIR/closures.rs:127:23
   |
LL |       pub fn used_impl<G: Default>() -> u32 {
   |                        - generic parameter `G` is unused
LL |
LL |           let add_one = |x: u32| {
   |  _______________________^
LL | |
LL | |             let _: F = Default::default();
LL | |             x + 1
LL | |         };
   | |_________^

error: item has unused generic parameters
  --> $DIR/closures.rs:125:12
   |
LL |     pub fn used_impl<G: Default>() -> u32 {
   |            ^^^^^^^^^ - generic parameter `G` is unused

error: item has unused generic parameters
  --> $DIR/closures.rs:114:23
   |
LL |   impl<F: Default> Foo<F> {
   |        - generic parameter `F` is unused
...
LL |           let add_one = |x: u32| {
   |  _______________________^
LL | |
LL | |             let _: G = Default::default();
LL | |             x + 1
LL | |         };
   | |_________^

error: item has unused generic parameters
  --> $DIR/closures.rs:112:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn used_fn<G: Default>() -> u32 {
   |            ^^^^^^^

error: aborting due to 9 previous errors

